tests/rustdoc-ui/intra-doc/hidden-check.stderr
error: unresolved link to `not::exist`
  --> $DIR/hidden-check.rs:8:6
   |
LL | /// [not::exist]
   |      ^^^^^^^^^^ no item named `not` in scope
   |
note: the lint level is defined here
  --> $DIR/hidden-check.rs:6:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

